--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=store.db"
+  "DefaultConnection": "Server=HP;Database=ECOMM;User Id=sandeep;Password=Raju@143382;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
   }
+
 }
